@@ -1,3 +1,7 @@
+2009-10-17  David Sedeño <david@alderia.com>
+
+  * data/gwget.ui: Remove duplicates ids. Fix #597396.
+
 2009-10-04  David Sedeño <david@alderia.com>
 
   * configure.ac, NEWS: Version 1.0.3 
